Some more baseline refactoring

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -96,6 +96,7 @@
   "3TD2V5": "(UTC+06:00) Dhaka",
   "3Y8a6G": "Required parameters {parameters} not set or invalid",
   "3afjx+": "(UTC+09:00) Chita",
+  "3eeli7": "Select a source schema",
   "3ewBbk": "The entered identity is not associated with this Logic App.",
   "3jlz+B": "(UTC+03:30) Tehran",
   "3jwMBm": "Invalid json format. Missing beginning {openingBracket} or ending {closingBracket}.",
@@ -131,7 +132,6 @@
   "6+RwRp": "Hybrid Connector",
   "63/zYN": "Required. The object to check if it is greater than value being compared to.",
   "65FlWi": "(UTC+08:45) Eucla",
-  "6Ld/c8": "Select a target schema",
   "6OSgRP": "Test map",
   "6PdOcy": "Cancel",
   "6XR3FS": "(UTC+09:30) Adelaide",
@@ -389,7 +389,6 @@
   "OOUSLP": "This function doesn't require any input.",
   "ORVfYZ": "Loading operations...",
   "OSHNZ2": "Comment",
-  "OUS2wX": "Select the schema for dropdown",
   "OVvieE": "Returns the results from the top-level actions in the specified scoped action, such as a For_each, Until, or Scope action.",
   "OdNhwc": "Ungroup",
   "Oib1mL": "{hours}h {minutes}m",
@@ -422,7 +421,6 @@
   "Q/7unA": "Object",
   "Q0xpPQ": "Required. The object to check if it is less or equal to the comparing object.",
   "Q4TUFX": "Discard",
-  "QBOaAu": "Select a source schema",
   "QEp3C8": "Convert the input to a JSON type value",
   "QGbUXX": "Status code",
   "QQYzHC": "Context menu for {title} card",
@@ -534,6 +532,7 @@
   "XTuxmH": "{minutes} minutes {seconds} seconds",
   "XX1ioe": "(UTC+03:00) Kuwait, Riyadh",
   "XaS4ds": "(UTC-08:00) Pacific Time (US & Canada)",
+  "XkBxv5": "Select a target schema",
   "Xnn0uj": "Request",
   "XqamWZ": "Delete",
   "XsktQ/": "Limit Logic Apps to not include workflow metadata headers in the response.",
@@ -659,6 +658,7 @@
   "_3TD2V5.comment": "Timezone value ",
   "_3Y8a6G.comment": "Error message to show when required parameters are not set or invalid",
   "_3afjx+.comment": "Timezone value ",
+  "_3eeli7.comment": "Source schema dropdown placeholder",
   "_3ewBbk.comment": "error message for invalid user",
   "_3jlz+B.comment": "Timezone value ",
   "_3jwMBm.comment": "Invalid JSON format",
@@ -694,7 +694,6 @@
   "_6+RwRp.comment": "Resource group title",
   "_63/zYN.comment": "Required object parameter to compare to in less function",
   "_65FlWi.comment": "Timezone value ",
-  "_6Ld/c8.comment": "placeholder for selecting the target schema dropdown",
   "_6OSgRP.comment": "Test map panel header",
   "_6PdOcy.comment": "Cancel",
   "_6XR3FS.comment": "Timezone value ",
@@ -952,7 +951,6 @@
   "_OOUSLP.comment": "Function doesn't have or require inputs",
   "_ORVfYZ.comment": "Message to show under the loading icon when loading operationst",
   "_OSHNZ2.comment": "Label for the comment textfield",
-  "_OUS2wX.comment": "Dropdown for selecting or changing the input or target schema ",
   "_OVvieE.comment": "Label for description of custom result Function",
   "_OdNhwc.comment": "Ungroup button",
   "_Oib1mL.comment": "This is a time duration in abbreviated format",
@@ -985,7 +983,6 @@
   "_Q/7unA.comment": "This is an option in a dropdown where users can select type Object for their parameter.",
   "_Q0xpPQ.comment": "Required object parameter to check if less than or equal to using lessOrEqual function",
   "_Q4TUFX.comment": "Button text for discard the unsaved changes",
-  "_QBOaAu.comment": "placeholder for selecting the source schema dropdown",
   "_QEp3C8.comment": "Label for description of custom json Function",
   "_QGbUXX.comment": "Response status code for test map API",
   "_QQYzHC.comment": "Accessability label",
@@ -1097,6 +1094,7 @@
   "_XTuxmH.comment": "This is a time duration in full non abbreviated format",
   "_XX1ioe.comment": "Timezone value ",
   "_XaS4ds.comment": "Timezone value ",
+  "_XkBxv5.comment": "Target schema dropdown placeholder",
   "_Xnn0uj.comment": "Header text for request",
   "_XqamWZ.comment": "Label of Delete Token Button",
   "_XsktQ/.comment": "description of workflow headers on response setting",
@@ -1155,6 +1153,7 @@
   "_c1XmvN.comment": "Timezone value ",
   "_c2XklE.comment": "Placeholder text for Operation/Connector search bar",
   "_c3G/zq.comment": "Label for description of custom setProperty Function",
+  "_c4GQZE.comment": "Schema dropdown aria label",
   "_c6XbVI.comment": "label for panel component",
   "_c8UPLp.comment": "Section 2 of text for including dynamic content section",
   "_cJm+ah.comment": "Required text parameter to search nthIndexOf function with",
@@ -1552,6 +1551,7 @@
   "c1XmvN": "(UTC+13:00) Nuku'alofa",
   "c2XklE": "Search",
   "c3G/zq": "Returns an object with a property set to the provided value",
+  "c4GQZE": "Select the schema for dropdown",
   "c6XbVI": "panel",
   "c8UPLp": "Dynamic content may also be added from other sources.",
   "cJm+ah": "Required. The value to search the index of.",
