--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1,12 +1,14 @@
 {
   "+20fdv": "Invalid properties '{0}' for authentication type '{1}'.",
   "+3efoo": "No schema is added",
+  "+DxBpE": "Failed loading the schema. Please try again.",
   "+W9fkq": "(UTC+08:00) Kuala Lumpur, Singapore",
   "+dlOgj": "(UTC-05:00) Haiti",
   "+g+mch": "Returns the body for a part in a multipart output of an action",
   "+iMTt7": "Check to select this connection",
   "+lpuMl": "Required. The value to return if the expression is 'false'.",
   "+xiT4Q": "Pagination",
+  "/9r9ML": "Add target schema",
   "/AtN16": "(UTC+09:30) Darwin",
   "/B2CTz": "(UTC+08:00) Beijing, Chongqing, Hong Kong, Urumqi",
   "/I/U8L": "Body",
@@ -142,6 +144,7 @@
   "6oqk+A": "Previous",
   "6pd1bE": "(UTC-07:00) Arizona",
   "6qkBwz": "Required. The number to multiply Multiplicand 2 with.",
+  "73iM9+": "Update source schema",
   "7GSk99": "OK",
   "7KxCGX": "(UTC+10:30) Lord Howe Island",
   "7LmpNN": "Parameter \"{parameterName}\" cannot be found for this operation",
@@ -251,6 +254,7 @@
   "ExaACE": "Connection display name",
   "F3IDl8": "Required. The number of a specified time unit to add.",
   "F489Vg": "(UTC+08:00) Irkutsk",
+  "F9dR1Q": "Add",
   "FDF4Qb": "Returns a parameter value that is defined in the definition",
   "FDWfqM": "Secure Outputs",
   "FGS2fS": "has failed",
@@ -297,7 +301,6 @@
   "IUE/lQ": "(UTC-01:00) Cabo Verde Is.",
   "IW2MjQ": "Converts a string timestamp passed in from a UTC to a target time zone",
   "IXy91L": "Add a target schema",
-  "Ie4sUt": "Configure",
   "IgNz8Y": "Action",
   "IjZFjQ": "(UTC+07:00) Barnaul, Gorno-Altaysk",
   "IlY1Lj": "Return to browse",
@@ -333,6 +336,7 @@
   "LJmfmK": "See More",
   "LMB8am": "Creating...",
   "LOwePI": "Invalid type on split on value '{splitOn}', split on not in array.",
+  "LR/3Lr": "Configure",
   "LS8rfZ": "Returns the scheme from a URI",
   "LZm3ze": "Add a parallel branch",
   "Lft/is": "Add new",
@@ -432,7 +436,6 @@
   "QePi+D": "Data type",
   "QknZQ1": "Loading...",
   "Qn8qxn": "Returns a string in date format",
-  "QnPHOB": "Add target schema",
   "QpRRt3": "Required. The string to delimit items with.",
   "QrQDdp": "Required. A string containing the unit of time specified in the interval to subtract.",
   "Qu1HkA": "{hours}h",
@@ -563,12 +566,14 @@
   "Zr0yTE": "Unsupported 'in' value : '{value}' in Parameter",
   "_+20fdv.comment": "Error message when having multiple invalid authentication properties",
   "_+3efoo.comment": "Placeholder when no schema has been added",
+  "_+DxBpE.comment": "Load schema error message",
   "_+W9fkq.comment": "Timezone value ",
   "_+dlOgj.comment": "Timezone value ",
   "_+g+mch.comment": "Label for description of custom multipartBody Function",
   "_+iMTt7.comment": "aria label description for check button",
   "_+lpuMl.comment": "Required value parameter to return given if function is false",
   "_+xiT4Q.comment": "title for pagination setting",
+  "_/9r9ML.comment": "Header to add target schema",
   "_/AtN16.comment": "Timezone value ",
   "_/B2CTz.comment": "Timezone value ",
   "_/I/U8L.comment": "Label text for request or response body",
@@ -704,6 +709,7 @@
   "_6oqk+A.comment": "Text of a button to go to previous page",
   "_6pd1bE.comment": "Timezone value ",
   "_6qkBwz.comment": "Required number parameter to be multiplied in mul function",
+  "_73iM9+.comment": "Header to update source schema",
   "_7GSk99.comment": "OK message appearing on a confirmation dialog.",
   "_7KxCGX.comment": "Timezone value ",
   "_7LmpNN.comment": "Error message to show in dropdown when dependent parameter is not found",
@@ -813,6 +819,7 @@
   "_ExaACE.comment": "aria label description for connection display name",
   "_F3IDl8.comment": "Required integer parameter to add to time",
   "_F489Vg.comment": "Timezone value ",
+  "_F9dR1Q.comment": "Add",
   "_FDF4Qb.comment": "Label for description of custom parameters Function",
   "_FDWfqM.comment": "title for secure outputs setting",
   "_FGS2fS.comment": "failed run",
@@ -859,7 +866,6 @@
   "_IUE/lQ.comment": "Timezone value ",
   "_IW2MjQ.comment": "Label for description of custom convertFromUtc Function",
   "_IXy91L.comment": "label to inform to add a target schema to be used",
-  "_Ie4sUt.comment": "Header text to inform users this panel is for configuration",
   "_IgNz8Y.comment": "Badge showing an action is a logic apps action",
   "_IjZFjQ.comment": "Timezone value ",
   "_IlY1Lj.comment": "Text for the Search Operations page navigation heading",
@@ -895,6 +901,7 @@
   "_LJmfmK.comment": "Click to view more token options",
   "_LMB8am.comment": "Button text to show a connection is being created",
   "_LOwePI.comment": "Error message for when split on array is invalid.",
+  "_LR/3Lr.comment": "Configure",
   "_LS8rfZ.comment": "Label for description of custom uriScheme Function",
   "_LZm3ze.comment": "Text for button to add a parallel branch",
   "_Lft/is.comment": "Button to add a new connection",
@@ -994,7 +1001,6 @@
   "_QePi+D.comment": "Data type of current node",
   "_QknZQ1.comment": "This is a message shown while loading. This is announced text that is said out loud with screen readers. Not shown in text.",
   "_Qn8qxn.comment": "Label for description of custom formatDateTime Function",
-  "_QnPHOB.comment": "header message for adding target schema",
   "_QpRRt3.comment": "Required string parameter to separate objects and join function on",
   "_QrQDdp.comment": "Required string parameter to represent the unit of time",
   "_Qu1HkA.comment": "This is a period in time in hours. {hours} is replaced by the number and h is an abbreviation of hours",
@@ -1144,7 +1150,6 @@
   "_ba9yGJ.comment": "Button text for loading more runs",
   "_bf7078.comment": "Label for description of custom max Function",
   "_bnStSJ.comment": "Timezone value ",
-  "_brtCAE.comment": "header message for adding source schema",
   "_bwfJdj.comment": "Text to show which node the target node is run after",
   "_bx3qeC.comment": "Timezone value ",
   "_bxhkTi.comment": "Test tab parameters description",
@@ -1204,6 +1209,7 @@
   "_faUrud.comment": "Message to show under the loading icon when loading connection parameters",
   "_fc1AV8.comment": "Callback url method",
   "_fg/34o.comment": "Label for logical functions",
+  "_fqNVDv.comment": "Back",
   "_froV/0.comment": "Timezone value ",
   "_ftwXvc.comment": "This is a status message to be shown in a monitoring view",
   "_g0a4Qe.comment": "Accessibility Label for the dictionary text value field",
@@ -1232,6 +1238,7 @@
   "_hdnZ9Y.comment": "ARIA label text for the download link",
   "_hq1mk6.comment": "Error while parsing expression for path value",
   "_hrbDu6.comment": "Label text for retry duration",
+  "_htj+eZ.comment": "Header to update target schema",
   "_hvbclb.comment": "MSI Audience Label Display Name",
   "_i/SguY.comment": "Text for dropdown of system-assigned managed identity",
   "_i/b3Ko.comment": "title for asynchronous response setting",
@@ -1293,7 +1300,6 @@
   "_lIPWQ6.comment": "Timezone value ",
   "_lPTdSf.comment": "Button text for run trigger",
   "_lV77P8.comment": "Type Title",
-  "_lWjfm3.comment": "button message for going back a panel to the default panel layer",
   "_lZT0JI.comment": "Button to add group",
   "_lcVG4C.comment": "skipped run",
   "_lcxLiq.comment": "Error Message for Invalid Array",
@@ -1331,7 +1337,6 @@
   "_nZ4nLn.comment": "title for suppress workflow headers setting",
   "_ngsC44.comment": "Required object parameter to check if less than using less function",
   "_nkk1mu.comment": "Label for description of custom addMinutes Function",
-  "_ntiOaL.comment": "aria label for close icon button that closes that panel on click",
   "_nx25nq.comment": "Hour of the day",
   "_o/0SEj.comment": "Label for description of custom last Function",
   "_o14STH.comment": "Required XML parameter to apply xpath function on",
@@ -1344,7 +1349,6 @@
   "_oV0xQ9.comment": "Placeholder text for workflow overview filter input",
   "_odQ554.comment": "Response body for test map API",
   "_ol+TkT.comment": "Timezone value ",
-  "_orhWzV.comment": "error message for loading the schema",
   "_oxH1L/.comment": "Timezone value ",
   "_p/0r2N.comment": "Required string parameter to be used as key for formDataValue function",
   "_p16/4S.comment": "Label text for request or response headers",
@@ -1476,6 +1480,7 @@
   "_wmDUGV.comment": "Label for description of custom convertToUtc Function",
   "_wmw/ai.comment": "Label for description of custom union Function",
   "_woJQhv.comment": "Label text for callback URL",
+  "_woq0x0.comment": "Header to add source schema",
   "_wzEneQ.comment": "Close",
   "_x+6ccf.comment": "Day of the week",
   "_x0or2o.comment": "Required collection parameter to apply length Function",
@@ -1542,7 +1547,6 @@
   "ba9yGJ": "Load more",
   "bf7078": "Returns the maximum value in the input array of numbers",
   "bnStSJ": "(UTC+05:30) Chennai, Kolkata, Mumbai, New Delhi",
-  "brtCAE": "Add source schema",
   "bwfJdj": "Run after {sourceNodeId}",
   "bx3qeC": "(UTC-03:00) Brasilia",
   "bxhkTi": "Provide parameters to test the output.",
@@ -1602,6 +1606,7 @@
   "faUrud": "Loading connection data...",
   "fc1AV8": "HTTP {method} URL",
   "fg/34o": "Logical functions",
+  "fqNVDv": "Back",
   "froV/0": "(UTC+04:30) Kabul",
   "ftwXvc": "Ignored",
   "g0a4Qe": "Value",
@@ -1630,6 +1635,7 @@
   "hdnZ9Y": "Alt/Option + click to download '{displayName}'",
   "hq1mk6": "Operation path value does not match the template for segment. Path {pathValue}, Template {pathTemplate}",
   "hrbDu6": "Duration",
+  "htj+eZ": "Update target schema",
   "hvbclb": "Audience",
   "i/SguY": "System-assigned managed identity",
   "i/b3Ko": "Asynchronous Response",
@@ -1691,7 +1697,6 @@
   "lIPWQ6": "(UTC+07:00) Bangkok, Hanoi, Jakarta",
   "lPTdSf": "Run trigger",
   "lV77P8": "Title",
-  "lWjfm3": "Back",
   "lZT0JI": "Add Group",
   "lcVG4C": "is skipped",
   "lcxLiq": "Please enter a valid array",
@@ -1729,7 +1734,6 @@
   "nZ4nLn": "Suppress workflow headers",
   "ngsC44": "Required. The object to check if it is less than comparing object.",
   "nkk1mu": "Adds an integer number of minutes to a string timestamp passed in",
-  "ntiOaL": "Close",
   "nx25nq": "19",
   "o/0SEj": "Returns the last element in the array or string passed in",
   "o14STH": "Required. The XML on which to evaluate the XPath expression.",
@@ -1742,7 +1746,6 @@
   "oV0xQ9": "Enter the run identifier to open the run",
   "odQ554": "Response body",
   "ol+TkT": "(UTC-03:00) Salvador",
-  "orhWzV": "Failed loading the schema. Please try again.",
   "oxH1L/": "(UTC-07:00) Chihuahua, La Paz, Mazatlan",
   "p/0r2N": "Required. The key name of the form data value to return.",
   "p16/4S": "Headers",
@@ -1874,6 +1877,7 @@
   "wmDUGV": "Converts a string timestamp passed in from a source time zone to UTC",
   "wmw/ai": "Returns a single array or object with all the elements that are in either the array or object passed to this function",
   "woJQhv": "Callback URL:",
+  "woq0x0": "Add source schema",
   "wzEneQ": "Close",
   "x+6ccf": "Wednesday",
   "x0or2o": "Required. The collection for which to get the length.",
