Add close button to floating panel, and refactor where title props/styles come from

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -413,6 +413,7 @@
   "PP63jY": "more panels",
   "PQOiAc": "Collapse",
   "PRnqYA": "Required. The number of seconds to add. Can be negative to subtract seconds.",
+  "PSrCNL": "Function",
   "PXa0D4": "False",
   "PaPPLr": "Aborted",
   "PeLrFb": "(UTC+03:00) Moscow, St. Petersburg, Volgograd",
@@ -503,6 +504,7 @@
   "VE3cxq": "(UTC-07:00) Mountain Time (US & Canada)",
   "VI5Sa8": "Expand",
   "VKAk5g": "The provided workflow run name is not valid.",
+  "VLc3FV": "Source schema",
   "VUH9aj": "23",
   "VVfYvq": "Required. The number to divide by the Divisor.",
   "VXBWrq": "Comment",
@@ -978,6 +980,7 @@
   "_PP63jY.comment": "This is a label to access the overflowed panels",
   "_PQOiAc.comment": "An accessible label for collapse toggle icon",
   "_PRnqYA.comment": "Required integer parameter to subtract seconds from time",
+  "_PSrCNL.comment": "Function",
   "_PXa0D4.comment": "False",
   "_PaPPLr.comment": "This is a status message to be shown in a monitoring view",
   "_PeLrFb.comment": "Timezone value ",
@@ -1068,6 +1071,7 @@
   "_VE3cxq.comment": "Timezone value ",
   "_VI5Sa8.comment": "Label to expand",
   "_VKAk5g.comment": "Message text for an invalid run ID",
+  "_VLc3FV.comment": "Source schema",
   "_VUH9aj.comment": "Hour of the day",
   "_VVfYvq.comment": "Required number parameter to be divided from in div function",
   "_VXBWrq.comment": "This is for a label for a badge, it is used for screen readers and not shown on the screen.",
