--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1283,6 +1283,7 @@
   "_k5tGEr.comment": "This is the boolean value for Yes",
   "_kDsud+.comment": "Timezone value ",
   "_kHcCxH.comment": "This is a time duration in abbreviated format",
+  "_kJD/bW.comment": "Message to show under the loading icon when loading search results",
   "_kM+Mr0.comment": "Loading text when items are being fetched",
   "_kN6kce.comment": "Label for description of custom decodeBase64 Function",
   "_kYivbS.comment": "Link text for the prompt to download large inputs or outputs",
@@ -1679,6 +1680,7 @@
   "k5tGEr": "Yes",
   "kDsud+": "(UTC-03:00) Cayenne, Fortaleza",
   "kHcCxH": "{minutes}m {seconds}s",
+  "kJD/bW": "Loading search results...",
   "kM+Mr0": "Loading...",
   "kN6kce": "Returns a string representation of an input based64 string",
   "kYivbS": "Download (Alt/Option + click)",
