Adding support for workflow parameters and its integration

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -45,6 +45,7 @@
   "0y5eia": "More commands",
   "1+Z8n9": "Required. The data URI to convert to String representation.",
   "109OPL": "Returns the port from a URI. If port is not specified, returns the default port for the protocol",
+  "11qu8f": "Enter a valid integer.",
   "14lYtE": "18",
   "1A1P5b": "Comment",
   "1D047X": "Required. The value to convert to XML.",
@@ -52,6 +53,7 @@
   "1NBvKu": "Convert the parameter argument to a floating-point number",
   "1Ogj/V": "(UTC+02:00) Jerusalem",
   "1R6Vaa": "{count, plural, one {# item matched.} =0 {no items matched.} other {# items matched.}}",
+  "1REk6u": "Enter a valid email.",
   "1TE0e8": "Required. The value to search the index of.",
   "1VRGCF": "Specify one or more expressions which must be true for the trigger to fire.",
   "1ZDLZA": "Learn more",
@@ -121,6 +123,7 @@
   "4vmGh0": "Service request ID",
   "4wjJs0": "14",
   "4yC+4g": "Action Type",
+  "5+MuPz": "Enter a valid double.",
   "5J7j9k": "Required. The XPath expression to evaluate.",
   "5SAQOb": "Authority",
   "5aa76N": "Returns the first element in the array or string passed in",
@@ -155,6 +158,7 @@
   "7yEdSt": "Show more",
   "7yFLpB": "Copy URL",
   "7zzPsK": "Required. The string that may contain the value.",
+  "8+0teU": "Parameter name already exists.",
   "84D91Y": "Pfx",
   "89FJnl": "Invalid property '{0}' for authentication type '{1}'.",
   "8BoVtZ": "Error executing the api - {url}",
@@ -220,6 +224,7 @@
   "CG772M": "Connection required",
   "Ciol6I": "Output",
   "CkfIxl": "Source node removed from view.",
+  "ClZW2r": "Value",
   "CsPY74": "Credential Type",
   "Cy9qeQ": "(UTC+02:00) Helsinki, Kyiv, Riga, Sofia, Tallinn, Vilnius",
   "D+Ptnq": "Returns the path and query from a URI",
@@ -259,6 +264,7 @@
   "FN5zHQ": "Returns a section of a string defined by the start index and the end index",
   "FNbA9+": "Expand",
   "FS+/Tb": "Returns the body for a part in a multipart output of the trigger",
+  "FS06y3": "Must provide name of parameter.",
   "FUhNu4": "Split On",
   "FUuFlC": "Default",
   "FVavKy": "Returns the start of the day to a string timestamp passed in",
@@ -274,6 +280,7 @@
   "GAY7b8": "Returns the query from a URI",
   "GDUGlm": "Enter authority",
   "GLd3MU": "Required. The object to find inside the Within collection.",
+  "GXXLuT": "Enter a valid boolean.",
   "GYvF54": "Referencing functions",
   "GcG0qf": "Returns true if the parameters are false",
   "GdGm4T": "More commands",
@@ -292,6 +299,7 @@
   "HQ8/tk": "Button to add dynamic content if TokenPicker is shown",
   "HXLutF": "Key",
   "HfrUId": "Please select a card to see the content",
+  "HoQiVa": "Enter a valid datetime.",
   "HsO1Rd": "{addIcon} Install Gateway",
   "HzS2gJ": "Dynamic content not supported as properties in authentication.",
   "IA+Ogm": "22",
@@ -310,6 +318,7 @@
   "J/Kz1j": "Asynchronous Pattern",
   "J5/7vN": "Converts a string to lowercase using the casing rules of the invariant culture",
   "J55HA9": "Invalid operation. Number of items: {length}.",
+  "J9wWry": "Parameters",
   "JErLDT": "Delete",
   "JNQHws": "Required. A string that contains the time.",
   "JSfWJ0": "Required. The value that is converted to a boolean.",
@@ -359,9 +368,11 @@
   "MKTdNk": "Required. The data URI to convert to binary representation.",
   "MLCQzX": "Managed identity",
   "MTR4Vg": "Returns the current timestamp as a string",
+  "MVrv+N": "Enter a valid array.",
   "MYgKHu": "Actions",
   "Mb+Eaq": "Bool",
   "Mb/Vp8": "Next failed",
+  "Mgcs5s": "Enter a valid number.",
   "MirIsS": "Show code",
   "MmBfD1": "Unexpected error",
   "MnThTq": "Insert function",
@@ -504,6 +515,7 @@
   "VE3cxq": "(UTC-07:00) Mountain Time (US & Canada)",
   "VI5Sa8": "Expand",
   "VKAk5g": "The provided workflow run name is not valid.",
+  "VL9wOu": "Must provide value for parameter.",
   "VUH9aj": "23",
   "VVfYvq": "Required. The number to divide by the Divisor.",
   "VXBWrq": "Comment",
@@ -611,6 +623,7 @@
   "_0y5eia.comment": "Label for commands in panel header",
   "_1+Z8n9.comment": "Required dataUri string parameter to be converted using dataUriToString function",
   "_109OPL.comment": "Label for description of custom uriPort Function",
+  "_11qu8f.comment": "Error validation message",
   "_14lYtE.comment": "Hour of the day",
   "_1A1P5b.comment": "Comment Label",
   "_1D047X.comment": "Required string parameter to be converted using xml function",
@@ -618,6 +631,7 @@
   "_1NBvKu.comment": "Label for description of custom float Function",
   "_1Ogj/V.comment": "Timezone value ",
   "_1R6Vaa.comment": "This is announced text that is said out loud with screen readers. Not shown in text.",
+  "_1REk6u.comment": "Error validation message",
   "_1TE0e8.comment": "Required text parameter to search indexOf function with",
   "_1VRGCF.comment": "description of tigger confition expression setting",
   "_1ZDLZA.comment": "Text for learn more link",
@@ -687,6 +701,7 @@
   "_4vmGh0.comment": "Label text for retry service request ID",
   "_4wjJs0.comment": "Hour of the day",
   "_4yC+4g.comment": "Filter by action type",
+  "_5+MuPz.comment": "Error validation message",
   "_5J7j9k.comment": "Required xpath parameter to identify which xPath to evaluate",
   "_5SAQOb.comment": "Authority Label Display Name",
   "_5aa76N.comment": "Label for description of custom first Function",
@@ -721,6 +736,7 @@
   "_7yEdSt.comment": "Toggle button text for showing advanced parameters",
   "_7yFLpB.comment": "ARIA label and tooltip text for the copy button",
   "_7zzPsK.comment": "Required text parameter to search endsWith function on",
+  "_8+0teU.comment": "Error message when the workflow parameter name already exists.",
   "_84D91Y.comment": "OAuth Pfx Label Display Name",
   "_89FJnl.comment": "Error message when having an invalid authentication property",
   "_8BoVtZ.comment": "Error message to show on dynamic call failure",
@@ -786,6 +802,7 @@
   "_CG772M.comment": "This is for a label for a badge, it is used for screen readers and not shown on the screen.",
   "_Ciol6I.comment": "Output",
   "_CkfIxl.comment": "Message on removing source node",
+  "_ClZW2r.comment": "Parameter Field Value Title",
   "_CsPY74.comment": "Authentication OAuth Type Label",
   "_Cy9qeQ.comment": "Timezone value ",
   "_D+Ptnq.comment": "Label for description of custom uriPathAndQuery Function",
@@ -825,6 +842,7 @@
   "_FN5zHQ.comment": "Label for description of custom slice Function",
   "_FNbA9+.comment": "Expand, making the node bigger, showing the contents",
   "_FS+/Tb.comment": "Label for description of custom triggerMultipartBody Function",
+  "_FS06y3.comment": "Error message when the workflow parameter name is empty.",
   "_FUhNu4.comment": "title for split on setting",
   "_FUuFlC.comment": "Default, the backup option if none other apply",
   "_FVavKy.comment": "Label for description of custom startOfDay Function",
@@ -840,6 +858,7 @@
   "_GAY7b8.comment": "Label for description of custom uriQuery Function",
   "_GDUGlm.comment": "Authority Placeholder Text",
   "_GLd3MU.comment": "Required object parameter to find for the contains function",
+  "_GXXLuT.comment": "Error validation message",
   "_GYvF54.comment": "Label for referencing functions",
   "_GcG0qf.comment": "Label for description of custom not Function",
   "_GdGm4T.comment": "Label for commands in row",
@@ -858,6 +877,7 @@
   "_HQ8/tk.comment": "Text for if image does not show up",
   "_HXLutF.comment": "Accessibility Label for dictionary text key field",
   "_HfrUId.comment": "Empty Panel Content Message",
+  "_HoQiVa.comment": "Error validation message",
   "_HsO1Rd.comment": "Option to install a new gateway, links to new page",
   "_HzS2gJ.comment": "Error message for when putting token in authentication property",
   "_IA+Ogm.comment": "Hour of the day",
@@ -876,6 +896,7 @@
   "_J/Kz1j.comment": "title for async pattern setting",
   "_J5/7vN.comment": "Label for description of custom toLower Function",
   "_J55HA9.comment": "Exception message for invalid formdata operation.",
+  "_J9wWry.comment": "Heading section for Parameter tokens",
   "_JErLDT.comment": "Delete label",
   "_JNQHws.comment": "Required string parameter that contains the time",
   "_JSfWJ0.comment": "Required parameter to be converted using bool function",
@@ -925,9 +946,11 @@
   "_MKTdNk.comment": "Required dataURI string parameter to be converted using dataUriToBinary function",
   "_MLCQzX.comment": "Managed Identity Label Display Name",
   "_MTR4Vg.comment": "Label for description of custom utcNow Function",
+  "_MVrv+N.comment": "Error validation message",
   "_MYgKHu.comment": "Heading for a tooltip explaining Actions",
   "_Mb+Eaq.comment": "This is an option in a dropdown where users can select type Boolean for their parameter.",
   "_Mb/Vp8.comment": "Button indicating to go to the next page with failed options",
+  "_Mgcs5s.comment": "Error validation message",
   "_MirIsS.comment": "Button to display the code view",
   "_MmBfD1.comment": "This is the default message shown in case of an error. It can be shown in multiple contexts but generally would be a notification",
   "_MnThTq.comment": "Message to insert function",
@@ -1070,6 +1093,7 @@
   "_VE3cxq.comment": "Timezone value ",
   "_VI5Sa8.comment": "Label to expand",
   "_VKAk5g.comment": "Message text for an invalid run ID",
+  "_VL9wOu.comment": "Error message when the workflow parameter value is empty.",
   "_VUH9aj.comment": "Hour of the day",
   "_VVfYvq.comment": "Required number parameter to be divided from in div function",
   "_VXBWrq.comment": "This is for a label for a badge, it is used for screen readers and not shown on the screen.",
@@ -1139,6 +1163,7 @@
   "_aK4iLW.comment": "title for data handling setting section",
   "_aRKDWL.comment": "Error message for creating a connection",
   "_ahsVI/.comment": "OAuth Pfx Placeholder Text",
+  "_amRYtC.comment": "Error validation message",
   "_auUI93.comment": "label to inform to upload or select source schema to be used",
   "_b9/1dK.comment": "A placeholder for the dictionary value field",
   "_b9P8SA.comment": "Exception for unsupported token types",
@@ -1238,6 +1263,7 @@
   "_hN7iBP.comment": "A duration of time shown in seconds",
   "_hPM6iC.comment": "Label for description of custom sub Function",
   "_hdnZ9Y.comment": "ARIA label text for the download link",
+  "_hic23z.comment": "Error validation message",
   "_hq1mk6.comment": "Error while parsing expression for path value",
   "_hrbDu6.comment": "Label text for retry duration",
   "_hvbclb.comment": "MSI Audience Label Display Name",
@@ -1296,6 +1322,7 @@
   "_kneb9/.comment": "Timezone value ",
   "_knylNW.comment": "Required integer parameter to be used as upper bound for rand function",
   "_kuFK3E.comment": "Invalid authentication without type property",
+  "_kxMDyM.comment": "Error validation message",
   "_l36V56.comment": "This is a time duration in full non abbreviated format",
   "_lFve22.comment": "Timezone value ",
   "_lIPWQ6.comment": "Timezone value ",
@@ -1307,7 +1334,6 @@
   "_lcxLiq.comment": "Error Message for Invalid Array",
   "_lgs5sf.comment": "label text for stateless run mode",
   "_ljAOR6.comment": "Label for description of custom body Function",
-  "_lztiwS.comment": "Parameter Field Actual Value Title",
   "_m7Y6Qf.comment": "Title for a tab panel",
   "_m8Q61y.comment": "Parameter Field Name Title",
   "_mAuMD+.comment": "Placeholder for empty collapsed array",
@@ -1344,6 +1370,7 @@
   "_o/0SEj.comment": "Label for description of custom last Function",
   "_o14STH.comment": "Required XML parameter to apply xpath function on",
   "_o1HOyf.comment": "Accessibility label telling that the user is on page {current} of {max} pages",
+  "_o2Cmny.comment": "Error validation message",
   "_o3SfI4.comment": "Label to fit the whole canvas in view",
   "_oAFcW6.comment": "Required string parameter to be decoded using decodeDataUri function",
   "_oLtwMw.comment": "title for content transfer setting",
@@ -1398,6 +1425,7 @@
   "_rCl53e.comment": "Label for the title for panel header card",
   "_rDDPpJ.comment": "Authentication OAuth Secret Type Label",
   "_rDt4Iu.comment": "aria label description for invalid connections",
+  "_rSIBjh.comment": "Parameter Field Value Placeholder Text",
   "_raBiud.comment": "Require parameters to find maximum using max function",
   "_rcz4w4.comment": "Label for description of custom uriComponent Function",
   "_rjyBPU.comment": "Token picker mode to insert expressions",
@@ -1449,7 +1477,6 @@
   "_ui7GCl.comment": "Hour of the day",
   "_unMaeV.comment": "Heading section for Variable tokens",
   "_urAHv1.comment": "Hour of the day",
-  "_ut5Med.comment": "Parameter Field Default Value Title",
   "_uzsleE.comment": "Label for description of custom createArray Function",
   "_v39HKj.comment": "Label for description of custom Global Unique Identifier Function",
   "_v7ipqH.comment": "error message for deselection of last run after action",
@@ -1514,7 +1541,6 @@
   "_yxsn7s.comment": "Timezone value ",
   "_yyYtZV.comment": "aria label description for connection gateway",
   "_z3VuE+.comment": "Menu label",
-  "_z4YYlQ.comment": "Parameter Field Default Value Placeholder Text",
   "_z9kH+0.comment": "Text for delete node modal body",
   "_zBMVKg.comment": "Required string parameter to be converted using decimal function",
   "_zCsGWP.comment": "Placeholder text for Value",
@@ -1537,6 +1563,7 @@
   "aK4iLW": "Data Handling",
   "aRKDWL": "Failed with error: {errorMessage}. Please sign in again.",
   "ahsVI/": "Enter Pfx",
+  "amRYtC": "Enter a valid float.",
   "auUI93": "Add or select a source schema to use for your map.",
   "b9/1dK": "Value",
   "b9P8SA": "Unsupported Token Type: {controls}",
@@ -1636,6 +1663,7 @@
   "hN7iBP": "{seconds, plural, one {# second} other {# seconds}}",
   "hPM6iC": "Returns the result from subtracting two numbers",
   "hdnZ9Y": "Alt/Option + click to download '{displayName}'",
+  "hic23z": "The value is too large.",
   "hq1mk6": "Operation path value does not match the template for segment. Path {pathValue}, Template {pathTemplate}",
   "hrbDu6": "Duration",
   "hvbclb": "Audience",
@@ -1694,6 +1722,7 @@
   "kneb9/": "(UTC-12:00) International Date Line West",
   "knylNW": "Required. This value is the next integer after the highest integer that could be returned.",
   "kuFK3E": "Missing authentication type property: 'type'.",
+  "kxMDyM": "Enter a valid json.",
   "l36V56": "{hours} hours {minutes} minutes",
   "lFve22": "(UTC+01:00) Sarajevo, Skopje, Warsaw, Zagreb",
   "lIPWQ6": "(UTC+07:00) Bangkok, Hanoi, Jakarta",
@@ -1705,7 +1734,6 @@
   "lcxLiq": "Please enter a valid array",
   "lgs5sf": "Stateless run mode:",
   "ljAOR6": "Shorthand for actions('actionName').outputs.body",
-  "lztiwS": "Actual Value",
   "m7Y6Qf": "Testing",
   "m8Q61y": "Name",
   "mAuMD+": "Enter an Array",
@@ -1742,6 +1770,7 @@
   "o/0SEj": "Returns the last element in the array or string passed in",
   "o14STH": "Required. The XML on which to evaluate the XPath expression.",
   "o1HOyf": "{current_page} of {max_page}",
+  "o2Cmny": "Enter a valid uri.",
   "o3SfI4": "Zoom to fit",
   "oAFcW6": "Required. The dataURI to decode into a binary representation.",
   "oLtwMw": "Content Transfer",
@@ -1796,6 +1825,7 @@
   "rCl53e": "Card Title",
   "rDDPpJ": "Secret",
   "rDt4Iu": "Is connection invalid",
+  "rSIBjh": "Enter value for parameter.",
   "raBiud": "Required. Either an array of values to find the maximum value, or the first value of a set.",
   "rcz4w4": "Returns a URI encoded representation of a value",
   "rjyBPU": "Expression",
@@ -1847,7 +1877,6 @@
   "ui7GCl": "16",
   "unMaeV": "Variables",
   "urAHv1": "4",
-  "ut5Med": "Default Value",
   "uzsleE": "Creates an array from the parameters",
   "v39HKj": "Generates a globally unique string (GUID)",
   "v7ipqH": "Each action must have one or more run after configurations",
@@ -1912,7 +1941,6 @@
   "yxsn7s": "(UTC+00:00) Casablanca",
   "yyYtZV": "Connection gateway",
   "z3VuE+": "Menu",
-  "z4YYlQ": "Enter default value for parameter.",
   "z9kH+0": "This will also remove all child steps.",
   "zBMVKg": "Required. The value that is converted to a decimal number.",
   "zCsGWP": "Enter value",
