--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -129,6 +129,7 @@
   "5aa76N": "Returns the first element in the array or string passed in",
   "5b0sKi": "Returns true if an object, array, or string is empty",
   "5cPiWA": "Required. The name of the loop whose item you want.",
+  "5hWg4V": "Select element",
   "5qzZMo": "Loading...",
   "5rkegy": "Delete Parameter",
   "6+RwRp": "Hybrid Connector",
@@ -696,6 +697,7 @@
   "_5aa76N.comment": "Label for description of custom first Function",
   "_5b0sKi.comment": "Label for description of custom empty Function",
   "_5cPiWA.comment": "Required string parameter to determine loop wanted",
+  "_5hWg4V.comment": "Select element",
   "_5qzZMo.comment": "A message shown at the bottom of a list when the next set of data is loading",
   "_5rkegy.comment": "Delete Button Tooltip Text",
   "_6+RwRp.comment": "Resource group title",
@@ -1400,6 +1402,7 @@
   "_raBiud.comment": "Require parameters to find maximum using max function",
   "_rcz4w4.comment": "Label for description of custom uriComponent Function",
   "_rjyBPU.comment": "Token picker mode to insert expressions",
+  "_rsdJcV.comment": "Main message displayed in the placeholder",
   "_rstpaK.comment": "Timezone value ",
   "_rv0Pn+.comment": "Add new option",
   "_s5RV9B.comment": "Label for description of custom dayOfMonth Function",
@@ -1796,6 +1799,7 @@
   "raBiud": "Required. Either an array of values to find the maximum value, or the first value of a set.",
   "rcz4w4": "Returns a URI encoded representation of a value",
   "rjyBPU": "Expression",
+  "rsdJcV": "Select source schema elements to build your map",
   "rstpaK": "(UTC-06:00) Central Time (US & Canada)",
   "rv0Pn+": "Add new",
   "s5RV9B": "Returns the day of year component of a string timestamp",
