Breadcrumb placeholder when in overview

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -32,6 +32,7 @@
   "0CvRZW": "Save",
   "0FzNJV": "Required. The base64 encoded string.",
   "0GqNGo": "Url decodes the input string",
+  "0IRUjM": "Select a target schema node to start mapping",
   "0JTHTZ": "Show run menu",
   "0KMjv6": "Tracking",
   "0R2D5l": "Returns a binary representation of a URI encoded string",
@@ -600,6 +601,7 @@
   "_0CvRZW.comment": "Save",
   "_0FzNJV.comment": "Required base64 string parameter to be converted to binary using base64ToBinary function",
   "_0GqNGo.comment": "Label for description of custom decodeUriComponent Function",
+  "_0IRUjM.comment": "Breadcrumb message shown in overview",
   "_0JTHTZ.comment": "Button text to show run menu",
   "_0KMjv6.comment": "title for tracking component",
   "_0R2D5l.comment": "Label for description of custom uriComponentToBinary Function",
