--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -112,6 +112,7 @@
   "45ubha": "Authentication",
   "47kOXr": "Required. The lowest integer that can be returned.",
   "4BrA0z": "Required. The number of days to add. Can be negative to subtract days.",
+  "4IS4yp": "Retry Policy",
   "4Q7WzU": "Add a new connection",
   "4XdZNj": "(UTC+01:00) West Central Africa",
   "4YKQAF": "Required. The unit of time specified in the interval.",
@@ -202,6 +203,7 @@
   "Amz9+m": "Enter audience",
   "AnX5yC": "Username",
   "ArTh0/": "Required. The string to encode into base64 representation.",
+  "AsqIUa": "Maximum Interval",
   "Az0QvG": "Automatic",
   "B/JzwK": "{actionCount, plural, one {# Action} =0 {0 Actions} other {# Actions}}",
   "B2s0iG": "Required. The index of the part to retrieve.",
@@ -465,6 +467,7 @@
   "Sz8KN3": "Test",
   "T0BFpC": "Set the tracking id for the run. For split-on this tracking id is for the initiating request.",
   "T6VIym": "Name",
+  "T7Xwii": "Interval",
   "T7zcR6": "Required. The expressions that must be true.",
   "T8Xqt9": "Failed",
   "TEN+cR": "Give feedback",
@@ -537,6 +540,7 @@
   "XTuxmH": "{minutes} minutes {seconds} seconds",
   "XX1ioe": "(UTC+03:00) Kuwait, Riyadh",
   "XaS4ds": "(UTC-08:00) Pacific Time (US & Canada)",
+  "XbtEq9": "Count",
   "XkBxv5": "Select a target schema",
   "Xnn0uj": "Request",
   "XqamWZ": "Delete",
@@ -679,6 +683,7 @@
   "_45ubha.comment": "Authentication Label Display Name",
   "_47kOXr.comment": "Required integer parameter to be used as lower bound for rand function",
   "_4BrA0z.comment": "Required integer parameter to subtract days from time",
+  "_4IS4yp.comment": "title for retry policy setting",
   "_4Q7WzU.comment": "Aria label description for add button",
   "_4XdZNj.comment": "Timezone value ",
   "_4YKQAF.comment": "Required string parameter to represent the unit of time",
@@ -769,6 +774,7 @@
   "_Amz9+m.comment": "MSI Audience Placeholder Text",
   "_AnX5yC.comment": "Username Label Display Name",
   "_ArTh0/.comment": "Required base64 string parameter to be converted using base64 function",
+  "_AsqIUa.comment": "title for retry maximum interval setting",
   "_Az0QvG.comment": "Option text for table column type in table editor",
   "_B/JzwK.comment": "This is the number of actions to be completed in a group",
   "_B2s0iG.comment": "Required number parameter to be used as index for triggerMultipartBody function",
@@ -1032,6 +1038,7 @@
   "_Sz8KN3.comment": "Test",
   "_T0BFpC.comment": "description of tracking id input field of split on setting",
   "_T6VIym.comment": "Column header for connection name",
+  "_T7Xwii.comment": "title for retry interval setting",
   "_T7zcR6.comment": "Required expression parameters to apply and function",
   "_T8Xqt9.comment": "This is a status message to be shown in a monitoring view",
   "_TEN+cR.comment": "Button text for submitting feedback",
@@ -1104,6 +1111,7 @@
   "_XTuxmH.comment": "This is a time duration in full non abbreviated format",
   "_XX1ioe.comment": "Timezone value ",
   "_XaS4ds.comment": "Timezone value ",
+  "_XbtEq9.comment": "title for retry count setting",
   "_XkBxv5.comment": "Target schema dropdown placeholder",
   "_Xnn0uj.comment": "Header text for request",
   "_XqamWZ.comment": "Label of Delete Token Button",
@@ -1235,6 +1243,7 @@
   "_gpbgjJ.comment": "Error message for when split on value not found in operation outputs.",
   "_gu9o9z.comment": "Label for description of custom iterationIndexes Function",
   "_h1lQDa.comment": "Modal Title text",
+  "_h40rpg.comment": "description of retry interval setting",
   "_hBLPXK.comment": "Timezone value ",
   "_hN7iBP.comment": "A duration of time shown in seconds",
   "_hPM6iC.comment": "Label for description of custom sub Function",
@@ -1387,11 +1396,13 @@
   "_qTqSqD.comment": "Dynamic call error message",
   "_qUWBUX.comment": "A duration of time shown in days",
   "_qc5S69.comment": "Label for description of custom length Function",
+  "_qiIs4V.comment": "placeholder for retry interval setting",
   "_qnI4Y1.comment": "Required string parameter to be converted using int function",
   "_qq/bq0.comment": "Timezone value ",
   "_qrxi0L.comment": "description of asynchronous response setting",
   "_r1FQhf.comment": "Timezone value ",
   "_r43nMc.comment": "Button text for undo the last action",
+  "_r7vZ5a.comment": "title for retry minimum interval setting",
   "_r8aZXs.comment": "Label for description of custom actions Function",
   "_r9SVE4.comment": "This is an option in a dropdown where users can select type Integer for their parameter.",
   "_rAyuzv.comment": "This is the boolean value for No",
@@ -1437,6 +1448,7 @@
   "_u/KSPz.comment": "Timezone value ",
   "_u6Gdft.comment": "Timezone value ",
   "_u9tr3k.comment": "Label for default message when no node selected",
+  "_uM1i27.comment": "placeholder for retry count setting",
   "_uN4zFU.comment": "OK message appearing on a alert message modal.",
   "_uR9WuI.comment": "Required collection parameters to check union function on",
   "_uRurmg.comment": "Timezone value ",
@@ -1520,6 +1532,7 @@
   "_zBMVKg.comment": "Required string parameter to be converted using decimal function",
   "_zCsGWP.comment": "Placeholder text for Value",
   "_zIDVd9.comment": "Required string parameter to be converted using json function",
+  "_zNesUZ.comment": "description of retry policy setting",
   "_zTKAc9.comment": "Select Actions",
   "_zUgja+.comment": "Label for button to clear the editor",
   "_zUs2yb.comment": "Label for target schema node",
@@ -1632,6 +1645,7 @@
   "gpbgjJ": "Invalid split on value '{splitOn}', cannot find in outputs.",
   "gu9o9z": "When used inside until loop, this function returns the current iteration index of the specified loop.",
   "h1lQDa": "Enter or paste a sample JSON payload.",
+  "h40rpg": "Specify interval in ISO 8601 format.",
   "hBLPXK": "(UTC-04:00) Georgetown, La Paz, Manaus, San Juan",
   "hN7iBP": "{seconds, plural, one {# second} other {# seconds}}",
   "hPM6iC": "Returns the result from subtracting two numbers",
@@ -1784,11 +1798,13 @@
   "qTqSqD": "Error code: '{errorCode}', Message: '{message}'.",
   "qUWBUX": "{days, plural, one {# day} other {# days}}",
   "qc5S69": "Returns the number of elements in an array or string",
+  "qiIs4V": "Example: {example}",
   "qnI4Y1": "Required. The value that is converted to an integer.",
   "qq/bq0": "(UTC+09:00) Yakutsk",
   "qrxi0L": "Asynchronous response allows a Logic App to respond with a 202 (Accepted) to indicate the request has been accepted for processing. A location header will be provided to retrieve the final state.",
   "r1FQhf": "(UTC+01:00) Windhoek",
   "r43nMc": "Undo",
+  "r7vZ5a": "Minimum Interval",
   "r8aZXs": "Enables an expression to derive its value from other JSON name and value pairs or the output of the runtime action",
   "r9SVE4": "Int",
   "rAyuzv": "No",
@@ -1834,6 +1850,7 @@
   "u/KSPz": "(UTC-04:00) Santiago",
   "u6Gdft": "(UTC+04:00) Abu Dhabi, Muscat",
   "u9tr3k": "Select an element to start configuring",
+  "uM1i27": "Specify a retry count from 1 to 90",
   "uN4zFU": "OK",
   "uR9WuI": "Required. The collections to evaluate. An object that appears in any of the collections also appears in the result.",
   "uRurmg": "(UTC+10:00) Guam, Port Moresby",
@@ -1917,6 +1934,7 @@
   "zBMVKg": "Required. The value that is converted to a decimal number.",
   "zCsGWP": "Enter value",
   "zIDVd9": "Required. The string that is converted to a native type value.",
+  "zNesUZ": "A retry policy applies to intermittent failures, characterized as HTTP status codes 408, 429, and 5xx, in addition to any connectivity exceptions. The default is an exponential interval policy set to retry 4 times.",
   "zTKAc9": "Select Actions",
   "zUgja+": "Clear custom value",
   "zUs2yb": "Target schema node",
