Added validation to retry policy settings

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -61,6 +61,7 @@
   "1VRGCF": "Specify one or more expressions which must be true for the trigger to fire.",
   "1ZDLZA": "Learn more",
   "1ZSzl6": "Each run after configuration must have at least one status checked",
+  "1diflT": "Retry Policy interval cannot be empty",
   "1ejxkP": "Secure Inputs",
   "1htSs7": "Off",
   "1jhzOM": "Required. The object to check if it is less than value being compared to.",
@@ -574,6 +575,7 @@
   "YfwZJO": "Search Tips",
   "YoQara": "None",
   "Yuu5CD": "Zoom out",
+  "Z9PWl/": "Retry Policy count is invalid (Must be from {min} to {max})",
   "ZM1mRy": "Concurrency Control",
   "ZME5hh": "Returns the day of month component of a string timestamp",
   "ZQ4lji": "(UTC+10:00) Canberra, Melbourne, Sydney",
@@ -646,6 +648,7 @@
   "_1VRGCF.comment": "description of tigger confition expression setting",
   "_1ZDLZA.comment": "Text for learn more link",
   "_1ZSzl6.comment": "error message for deselection of last run after status",
+  "_1diflT.comment": "error message for empty retry interval",
   "_1ejxkP.comment": "title for the secure inputs setting",
   "_1htSs7.comment": "label when setting is off",
   "_1jhzOM.comment": "Required object parameter to compare to in greater function",
@@ -1159,6 +1162,7 @@
   "_YfwZJO.comment": "Search tip header label",
   "_YoQara.comment": "Display text for when About Panel has no Tags",
   "_Yuu5CD.comment": "Label to zoom the canvas out",
+  "_Z9PWl/.comment": "error message for invalid retry count",
   "_ZM1mRy.comment": "title for concurrency setting",
   "_ZME5hh.comment": "Label for description of custom dayOfMonth Function",
   "_ZQ4lji.comment": "Timezone value ",
