Added regex for ISO 8601 checking

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1207,6 +1207,7 @@
   "_c8UPLp.comment": "Section 2 of text for including dynamic content section",
   "_cJm+ah.comment": "Required text parameter to search nthIndexOf function with",
   "_cK2A/V.comment": "Text for view docs button",
+  "_cP4UkW.comment": "error message for invalid retry interval",
   "_cT2MlP.comment": "Timezone value ",
   "_cVIZTQ.comment": "Timezone value ",
   "_cgq/+y.comment": "Placehodler text for dropdown",
@@ -1612,6 +1613,7 @@
   "c8UPLp": "Dynamic content may also be added from other sources.",
   "cJm+ah": "Required. The value to search the index of.",
   "cK2A/V": "View Documentation",
+  "cP4UkW": "Retry Policy interval is invalid, must match ISO 8601 duration format",
   "cT2MlP": "(UTC+11:00) Chokurdakh",
   "cVIZTQ": "(UTC+02:00) Tripoli",
   "cgq/+y": "Please select an identity",
