Added Retry Policy to Settings Panel (#1216)
* First pass

* Added validation to retry policy settings

* Small tweaks

* Added regex for ISO 8601 checking

* Small styling tweak, error reduction

Co-authored-by: Riley Evans <rileyevans@microsoft.com>

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -61,6 +61,7 @@
   "1VRGCF": "Specify one or more expressions which must be true for the trigger to fire.",
   "1ZDLZA": "Learn more",
   "1ZSzl6": "Each run after configuration must have at least one status checked",
+  "1diflT": "Retry Policy interval cannot be empty",
   "1ejxkP": "Secure Inputs",
   "1htSs7": "Off",
   "1jhzOM": "Required. The object to check if it is less than value being compared to.",
@@ -115,6 +116,7 @@
   "45ubha": "Authentication",
   "47kOXr": "Required. The lowest integer that can be returned.",
   "4BrA0z": "Required. The number of days to add. Can be negative to subtract days.",
+  "4IS4yp": "Retry Policy",
   "4Q7WzU": "Add a new connection",
   "4XdZNj": "(UTC+01:00) West Central Africa",
   "4YKQAF": "Required. The unit of time specified in the interval.",
@@ -208,6 +210,7 @@
   "Amz9+m": "Enter audience",
   "AnX5yC": "Username",
   "ArTh0/": "Required. The string to encode into base64 representation.",
+  "AsqIUa": "Maximum Interval",
   "Az0QvG": "Automatic",
   "B/JzwK": "{actionCount, plural, one {# Action} =0 {0 Actions} other {# Actions}}",
   "B2s0iG": "Required. The index of the part to retrieve.",
@@ -478,6 +481,7 @@
   "Sz8KN3": "Test",
   "T0BFpC": "Set the tracking id for the run. For split-on this tracking id is for the initiating request.",
   "T6VIym": "Name",
+  "T7Xwii": "Interval",
   "T7zcR6": "Required. The expressions that must be true.",
   "T8Xqt9": "Failed",
   "TEN+cR": "Give feedback",
@@ -551,6 +555,7 @@
   "XTuxmH": "{minutes} minutes {seconds} seconds",
   "XX1ioe": "(UTC+03:00) Kuwait, Riyadh",
   "XaS4ds": "(UTC-08:00) Pacific Time (US & Canada)",
+  "XbtEq9": "Count",
   "XkBxv5": "Select a target schema",
   "Xnn0uj": "Request",
   "XqamWZ": "Delete",
@@ -570,6 +575,7 @@
   "YfwZJO": "Search Tips",
   "YoQara": "None",
   "Yuu5CD": "Zoom out",
+  "Z9PWl/": "Retry Policy count is invalid (Must be from {min} to {max})",
   "ZM1mRy": "Concurrency Control",
   "ZME5hh": "Returns the day of month component of a string timestamp",
   "ZQ4lji": "(UTC+10:00) Canberra, Melbourne, Sydney",
@@ -642,6 +648,7 @@
   "_1VRGCF.comment": "description of tigger confition expression setting",
   "_1ZDLZA.comment": "Text for learn more link",
   "_1ZSzl6.comment": "error message for deselection of last run after status",
+  "_1diflT.comment": "error message for empty retry interval",
   "_1ejxkP.comment": "title for the secure inputs setting",
   "_1htSs7.comment": "label when setting is off",
   "_1jhzOM.comment": "Required object parameter to compare to in greater function",
@@ -696,6 +703,7 @@
   "_45ubha.comment": "Authentication Label Display Name",
   "_47kOXr.comment": "Required integer parameter to be used as lower bound for rand function",
   "_4BrA0z.comment": "Required integer parameter to subtract days from time",
+  "_4IS4yp.comment": "title for retry policy setting",
   "_4Q7WzU.comment": "Aria label description for add button",
   "_4XdZNj.comment": "Timezone value ",
   "_4YKQAF.comment": "Required string parameter to represent the unit of time",
@@ -789,6 +797,7 @@
   "_Amz9+m.comment": "MSI Audience Placeholder Text",
   "_AnX5yC.comment": "Username Label Display Name",
   "_ArTh0/.comment": "Required base64 string parameter to be converted using base64 function",
+  "_AsqIUa.comment": "title for retry maximum interval setting",
   "_Az0QvG.comment": "Option text for table column type in table editor",
   "_B/JzwK.comment": "This is the number of actions to be completed in a group",
   "_B2s0iG.comment": "Required number parameter to be used as index for triggerMultipartBody function",
@@ -1059,6 +1068,7 @@
   "_Sz8KN3.comment": "Test",
   "_T0BFpC.comment": "description of tracking id input field of split on setting",
   "_T6VIym.comment": "Column header for connection name",
+  "_T7Xwii.comment": "title for retry interval setting",
   "_T7zcR6.comment": "Required expression parameters to apply and function",
   "_T8Xqt9.comment": "This is a status message to be shown in a monitoring view",
   "_TEN+cR.comment": "Button text for submitting feedback",
@@ -1132,6 +1142,7 @@
   "_XTuxmH.comment": "This is a time duration in full non abbreviated format",
   "_XX1ioe.comment": "Timezone value ",
   "_XaS4ds.comment": "Timezone value ",
+  "_XbtEq9.comment": "title for retry count setting",
   "_XkBxv5.comment": "Target schema dropdown placeholder",
   "_Xnn0uj.comment": "Header text for request",
   "_XqamWZ.comment": "Label of Delete Token Button",
@@ -1151,6 +1162,7 @@
   "_YfwZJO.comment": "Search tip header label",
   "_YoQara.comment": "Display text for when About Panel has no Tags",
   "_Yuu5CD.comment": "Label to zoom the canvas out",
+  "_Z9PWl/.comment": "error message for invalid retry count",
   "_ZM1mRy.comment": "title for concurrency setting",
   "_ZME5hh.comment": "Label for description of custom dayOfMonth Function",
   "_ZQ4lji.comment": "Timezone value ",
@@ -1195,6 +1207,7 @@
   "_c8UPLp.comment": "Section 2 of text for including dynamic content section",
   "_cJm+ah.comment": "Required text parameter to search nthIndexOf function with",
   "_cK2A/V.comment": "Text for view docs button",
+  "_cP4UkW.comment": "error message for invalid retry interval",
   "_cT2MlP.comment": "Timezone value ",
   "_cVIZTQ.comment": "Timezone value ",
   "_cgq/+y.comment": "Placehodler text for dropdown",
@@ -1264,6 +1277,7 @@
   "_gpbgjJ.comment": "Error message for when split on value not found in operation outputs.",
   "_gu9o9z.comment": "Label for description of custom iterationIndexes Function",
   "_h1lQDa.comment": "Modal Title text",
+  "_h40rpg.comment": "description of retry interval setting",
   "_hBLPXK.comment": "Timezone value ",
   "_hN7iBP.comment": "A duration of time shown in seconds",
   "_hPM6iC.comment": "Label for description of custom sub Function",
@@ -1418,11 +1432,13 @@
   "_qTqSqD.comment": "Dynamic call error message",
   "_qUWBUX.comment": "A duration of time shown in days",
   "_qc5S69.comment": "Label for description of custom length Function",
+  "_qiIs4V.comment": "placeholder for retry interval setting",
   "_qnI4Y1.comment": "Required string parameter to be converted using int function",
   "_qq/bq0.comment": "Timezone value ",
   "_qrxi0L.comment": "description of asynchronous response setting",
   "_r1FQhf.comment": "Timezone value ",
   "_r43nMc.comment": "Button text for undo the last action",
+  "_r7vZ5a.comment": "title for retry minimum interval setting",
   "_r8aZXs.comment": "Label for description of custom actions Function",
   "_r9SVE4.comment": "This is an option in a dropdown where users can select type Integer for their parameter.",
   "_rAyuzv.comment": "This is the boolean value for No",
@@ -1470,6 +1486,7 @@
   "_u/KSPz.comment": "Timezone value ",
   "_u6Gdft.comment": "Timezone value ",
   "_u9tr3k.comment": "Label for default message when no node selected",
+  "_uM1i27.comment": "placeholder for retry count setting",
   "_uN4zFU.comment": "OK message appearing on a alert message modal.",
   "_uR9WuI.comment": "Required collection parameters to check union function on",
   "_uRurmg.comment": "Timezone value ",
@@ -1551,6 +1568,7 @@
   "_zBMVKg.comment": "Required string parameter to be converted using decimal function",
   "_zCsGWP.comment": "Placeholder text for Value",
   "_zIDVd9.comment": "Required string parameter to be converted using json function",
+  "_zNesUZ.comment": "description of retry policy setting",
   "_zTKAc9.comment": "Select Actions",
   "_zUgja+.comment": "Label for button to clear the editor",
   "_zUs2yb.comment": "Label for target schema node",
@@ -1595,6 +1613,7 @@
   "c8UPLp": "Dynamic content may also be added from other sources.",
   "cJm+ah": "Required. The value to search the index of.",
   "cK2A/V": "View Documentation",
+  "cP4UkW": "Retry Policy interval is invalid, must match ISO 8601 duration format",
   "cT2MlP": "(UTC+11:00) Chokurdakh",
   "cVIZTQ": "(UTC+02:00) Tripoli",
   "cgq/+y": "Please select an identity",
@@ -1664,6 +1683,7 @@
   "gpbgjJ": "Invalid split on value '{splitOn}', cannot find in outputs.",
   "gu9o9z": "When used inside until loop, this function returns the current iteration index of the specified loop.",
   "h1lQDa": "Enter or paste a sample JSON payload.",
+  "h40rpg": "Specify interval in ISO 8601 format.",
   "hBLPXK": "(UTC-04:00) Georgetown, La Paz, Manaus, San Juan",
   "hN7iBP": "{seconds, plural, one {# second} other {# seconds}}",
   "hPM6iC": "Returns the result from subtracting two numbers",
@@ -1818,11 +1838,13 @@
   "qTqSqD": "Error code: '{errorCode}', Message: '{message}'.",
   "qUWBUX": "{days, plural, one {# day} other {# days}}",
   "qc5S69": "Returns the number of elements in an array or string",
+  "qiIs4V": "Example: {example}",
   "qnI4Y1": "Required. The value that is converted to an integer.",
   "qq/bq0": "(UTC+09:00) Yakutsk",
   "qrxi0L": "Asynchronous response allows a Logic App to respond with a 202 (Accepted) to indicate the request has been accepted for processing. A location header will be provided to retrieve the final state.",
   "r1FQhf": "(UTC+01:00) Windhoek",
   "r43nMc": "Undo",
+  "r7vZ5a": "Minimum Interval",
   "r8aZXs": "Enables an expression to derive its value from other JSON name and value pairs or the output of the runtime action",
   "r9SVE4": "Int",
   "rAyuzv": "No",
@@ -1870,6 +1892,7 @@
   "u/KSPz": "(UTC-04:00) Santiago",
   "u6Gdft": "(UTC+04:00) Abu Dhabi, Muscat",
   "u9tr3k": "Select an element to start configuring",
+  "uM1i27": "Specify a retry count from 1 to 90",
   "uN4zFU": "OK",
   "uR9WuI": "Required. The collections to evaluate. An object that appears in any of the collections also appears in the result.",
   "uRurmg": "(UTC+10:00) Guam, Port Moresby",
@@ -1951,6 +1974,7 @@
   "zBMVKg": "Required. The value that is converted to a decimal number.",
   "zCsGWP": "Enter value",
   "zIDVd9": "Required. The string that is converted to a native type value.",
+  "zNesUZ": "A retry policy applies to intermittent failures, characterized as HTTP status codes 408, 429, and 5xx, in addition to any connectivity exceptions. The default is an exponential interval policy set to retry 4 times.",
   "zTKAc9": "Select Actions",
   "zUgja+": "Clear custom value",
   "zUs2yb": "Target schema node",
